--- a/index.html
+++ b/index.html
@@ -8,24 +8,36 @@
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
+            max-width: 600px;
+            margin: auto;
         }
         input {
-            width: 50%;
-
+            width: 100%;
+            padding: 10px;
+            margin-top: 10px;
+            font-size: 16px;
+        }
+        button {
+            padding: 10px 20px;
+            margin-top: 10px;
+            font-size: 16px;
+            cursor: pointer;
         }
         #result {
             margin-top: 20px;
+            border-top: 1px solid #ccc;
+            padding-top: 10px;
         }
         .pyramid-level {
             margin-left: 20px;
+            white-space: pre;
         }
     </style>
 </head>
 <body>
-    <h1>LoteriAaAaa
-    </h1>
-    <p>Introduce los números separados por espacios:</p>
-    <input type="text" id="numberInput" placeholder="Ejemplo: 2 4 6 7">
+    <h1>Pirámide de Sumas</h1>
+    <p>Introduce una serie de números:</p>
+    <input type="text" id="numberInput" placeholder="Ejemplo: 2467">
     <button onclick="generatePyramid()">Generar Pirámide</button>
 
     <div id="result"></div>
@@ -33,10 +45,10 @@
     <script>
         function generatePyramid() {
             const input = document.getElementById('numberInput').value;
-            const numbers = input.split(' ').map(Number).filter(n => !isNaN(n));
+            const numbers = Array.from(input).map(Number).filter(n => !isNaN(n));
 
             if (numbers.length === 0 || numbers.length > 25) {
-                alert("Por favor, introduce hasta 25 números válidos separados por espacios.");
+                alert("Por favor, introduce hasta 25 números válidos.");
                 return;
             }
 
