--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </style>
 </head>
 <body>
-    <h1>Pirámide de Sumas</h1>
-    <p>Introduce una serie de números:</p>
+    <h1>Loteriaaa</h1>
+    <p>Introduce los números:</p>
     <input type="text" id="numberInput" placeholder="Ejemplo: 2467">
     <button onclick="generatePyramid()">Generar Pirámide</button>
 
